tests/errors/invalid-interface-output.fil
comp main<G: 1, L: 1>(
  @interface[G] go_G: 1,
  @[G, G+1] in1: 32,
) -> (
  @[G+2, G+4] out: 1,
) {}