tests/errors/invalid-interface-output.expect
---STDERR---
error: bundle's availability is greater than the delay of the event
  ┌─ tests/errors/invalid-interface-output.fil:5:3
  │
1 │ comp main<G: 1, L: 1>(
  │              - event's delay
  ·
5 │   @[G+2, G+4] out: 1,
  │   ^^^^^^^^^^^ available for 2 cycles
  │
  = Cannot prove constraint: 1 >= 2

Compilation failed with 1 errors
